# nlbn_gui

./: .gitignore  ALTIUM_IMPLEMENTATION_GUIDE.md  README.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json  test_ids.txt
.claude/: settings.local.json
src/: app-styles.css  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/output/: nlbn.kicad_sym
src-tauri/output/nlbn.3dshapes/: STM32G431CBU6.wrl
src-tauri/output/nlbn.pretty/: STM32G431CBU6.kicad_mod
src-tauri/src/: commands.rs  converter_impl.rs  history.rs  lib.rs  main.rs  state.rs  types.rs
src-tauri/src/nlbn/: converter.rs  error.rs  library.rs  mod.rs
src-tauri/src/nlbn/altium/: converter.rs  footprint.rs  footprint_exporter.rs  mod.rs  symbol.rs  symbol_exporter.rs  tests.rs
src-tauri/src/nlbn/easyeda/: api.rs  importer.rs  mod.rs  models.rs  svg_parser.rs
src-tauri/src/nlbn/kicad/: footprint.rs  footprint_exporter.rs  layers.rs  mod.rs  model_exporter.rs  symbol.rs  symbol_exporter.rs
